--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@
   font-family: "Raleway", sans-serif;
   background-color: rgba(0, 0, 0, 0.2);
   text-align: center;
-  padding: 10px; }
+  padding: 10px;
+  padding-bottom: 14px; }
   .hambar ul {
     color: black; }
   .hambar li {
@@ -19,29 +20,123 @@
     margin: 20% 10%; }
     .hambar li:hover {
       transition: all, 0.7s, ease-in-out;
-      text-shadow: 2px 1px 0.8px black; }
+      text-shadow: 2px 1px 0.8px black;
+      cursor: pointer; }
 
-#example-rounded {
+.grid-container {
+  width: 100%;
+  max-width: 1200px; }
+
+/*-- our cleafix hack -- */
+.row:before,
+.row:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+[class*='col-'] {
+  float: left;
+  min-height: 1px; }
+
+.col-1 {
+  width: 16.66%; }
+
+.col-2 {
+  width: 33.33%; }
+
+.col-3 {
+  width: 50%; }
+
+.col-4 {
+  width: 66.66%; }
+
+.col-5 {
+  width: 83.33%; }
+
+.col-6 {
+  width: 100%; }
+
+.outline, .outline * {
+  outline: 1px solid #49C5A6; }
+
+[class*='col-'] > p {
+  background-color: #458D8A;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  color: #73E0DC; }
+
+.form {
+  background-color: #DF767E;
+  width: 200px;
+  margin: 0 auto; }
+  .form:field, .form .button-field {
+    margin: 0 auto; }
+
+.hamroll {
+  transition: transform 5s; }
+  .hamroll:hover {
+    transform: rotate(1080deg); }
+
+.ham-tooltip {
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  position: absolute;
+  padding: 15px;
+  max-width: 300px;
+  border-radius: 7px; }
+
+#sidebar {
+  width: 25%;
+  height: 700px;
+  display: inline-block;
+  float: left;
+  overflow: auto;
+  background-color: #FE9CA3;
+  text-align: center; }
+
+#mainbar {
+  width: 74%;
+  height: 700px;
+  display: inline-block;
+  float: right;
+  overflow: auto; }
+
+.example-rounded {
   cursor: pointer;
   border-radius: 7px;
   text-align: center;
   width: 70px;
   font-family: "Raleway", sans-serif;
-  background-color: red;
+  background-color: #FFA888;
   color: white; }
 
-#example-centered-wrapper {
+.example-wrapper {
   width: 70px;
   height: 70px;
   border: thin black solid; }
 
-#example-centered {
+.example-centered {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
   margin: 0 auto;
   width: 50px;
   height: 50px;
-  background: red; }
+  background: #FFA888; }
+
+.hamroll {
+  height: 200px;
+  width: 200px;
+  background-color: #FFA888;
+  padding: 10px; }
+
+.element-wrapper {
+  padding: 20px; }
+
+body {
+  font-family: "Raleway", sans-serif;
+  background-color: #FA7D86;
+  color: #DFcolor; }
 
 /*# sourceMappingURL=main.css.map */
