--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,1 +1,4 @@
-$default-font:'Raleway', sans-serif;
+// Palette UID: 55A0h0kfWBaeHi5f1sGeXNOcqXb
+$raleway:'Raleway', sans-serif;
+$DFbackground: #FFA888;
+$DFcolor: #66CB81
